fix(EA-CUST-048): add missing node definitions to existing tests for endpoint validation
Co-Authored-By: xuam yonh <gravityang@gmail.com>